--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <nav>
                     <ul class="nav navbar-nav">
                         <li><a href="#top">Home</a></li>
+						<li><a href="#top">Coming</a></li>
                     </ul>
                 </nav>
             </div>
