--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 
 <body>
 
-
-
         <header class="nav-down responsive-nav hidden-lg hidden-md">
             <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav">
                 <span class="sr-only">Toggle navigation</span>
@@ -36,7 +34,7 @@
                 <nav>
                     <ul class="nav navbar-nav">
                         <li><a href="#top">Home</a></li>
-						<li><a href="#top">Coming</a></li>
+                        <li><a href="#photograph">Photograph</a></li>
                     </ul>
                 </nav>
             </div>
@@ -56,10 +54,10 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#top">
+                        <a href="#photograph">
                             <span class="rect"></span>
                             <span class="circle"></span>
-                            Coming
+                            Photograph
                         </a>
                     </li>
 
@@ -106,10 +104,66 @@
             </div>
         </div>
 
+        <div class="page-content">
+            <section id="photograph" class="content-section">
+                <div class="section-heading">
+                    <h1>摄影<br><em>作品</em></h1>
+                    <p>Life is about capturing the moment in its beauty,  
+                    <br>and telling a story to every beautiful moment.</p>
+                </div>
+                <div class="section-content">
+                    <div class="masonry">
+                        <div class="row">
+                            <div class="item">
+                                <div class="col-md-8">
+                                    <a href="img/photograph_big_2.jpg" data-lightbox="image"><img src="img/photograph_2.jpg" alt="image 1"></a>
+                                </div>
+                            </div>
+                            <div class="item second-item">
+                                <div class="col-md-4">
+                                    <a href="img/photograph_big_1.jpg" data-lightbox="image"><img src="img/photograph_1.jpg" alt="image 2"></a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-4">
+                                    <a href="img/photograph_big_3.jpg" data-lightbox="image"><img src="img/photograph_3.jpg" alt="image 3"></a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-4">
+                                    <a href="img/photograph_big_6.jpg" data-lightbox="image"><img src="img/photograph_6.jpg" alt="image 2"></a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="img/photograph_big_7.jpg" data-lightbox="image"><img src="img/photograph_7.jpg" alt="image 1"></a>
+                                    </div>
+                                </div>
+                                <div class="item">
+                                    <div class="col-md-4">
+                                        <a href="img/photograph_big_8.jpg" data-lightbox="image"><img src="img/photograph_8.jpg" alt="image 3"></a>
+                                    </div>
+                                </div>
+                                
+                            <div class="item">
+                                <div class="col-md-4">
+                                    <a href="img/photograph_big_4.jpg" data-lightbox="image"><img src="img/photograph_4.jpg" alt="image 4"></a>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="col-md-8">
+                                    <a href="img/photograph_big_5.jpg" data-lightbox="image"><img src="img/photograph_5.jpg" alt="image 5"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>  <div class="tlinks">Collect from <a href="http://www.cssmoban.com/"  title="网站模板">网站模板</a></div> 
+            </section>
+        </div>  
 
         <div class="page-content">
             <section class="footer">
-                <p>Copyright &copy; 2018 Sean Pan</p>
+                <p>Copyright &copy; 2019 Sean Pan</p>
             </section>
         </div>
 
