--- a/second_anniversary/index.html
+++ b/second_anniversary/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Happy Anniversary</title>
 		<meta charset="utf-8" />
+		<link rel="shortcut icon" href="images/favicon.ico" >
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
