changed some contents

--- a/second_anniversary/index.html
+++ b/second_anniversary/index.html
@@ -34,7 +34,7 @@
 					<header>
 						<h2>牵起你的手已经两年啦</h2>
 					</header>
-					<p>你的手不大，也不算小，扣在我的手心里，正好。在贵州出差的时候，特别想你，我就想，我要写一个网站，来纪念这个两周年。敲下这行字的时候，是春天，校园里的树已经长满了年轻力壮的叶子，任由风吹得簌簌作响。漫天的柳絮席卷着我对你的思念，充满在广阔的蓝天和大地之间。
+					<p>你的手不大，也不算小，扣在我的手心里，正好。在贵州出差的时候，特别想你，我就想，我要写一个网站，来纪念这个两周年。敲下这行字的时候，是春天，校园里的树已经长满了年轻力壮的叶子，任由风吹得簌簌作响。漫天的柳絮席卷着我对你的思念，翱翔在广阔的蓝天和大地之间。
 					</p>
 				</div>
 			</section>
@@ -45,7 +45,7 @@
 					<header>
 						<h2>春天，像是你带来的精灵</h2>
 					</header>
-					<p>去年春天的时候，一只小船载着你和我，在紫竹园的湖上摇曳。春风划过你的指尖，吹出的泡泡在阳光下泛出五彩斑斓的光。春天像你，你像春天。</p>
+					<p>去年春天的时候，一只小船载着你和我，在紫竹园的湖上摇曳。春风划过你的指尖，吹出的泡泡在阳光下泛出五彩斑斓的光。树梢上的花朵争奇斗艳，好像在说：春天像你，你像春天。</p>
 				</div>
 			</section>
 
@@ -88,7 +88,7 @@
 						<header>
 							<h2>夏天，像是我心里的喜欢</h2>
 						</header>
-						<p>这是夏天的一个微风沉醉的夜晚，没有什么烦恼，只惦记着身边的你。你的手比空气还温热一些，我们坐在操场的看台上，看地上的人儿一圈一圈地跑，看天上的星星一闪一闪地亮，我想用手小心地托起你的脸蛋，轻轻地吻你。</p>
+						<p>这是夏天的一个微风沉醉的夜晚，没有什么烦恼，只惦记着身边的你。你的手比空气还温热一些，我们坐在操场的看台上，看地上的人儿一圈一圈地跑，看天上的星星一闪一闪地亮。我想用手小心地托起你的脸蛋，轻轻地亲吻你，然后告诉你：我好喜欢你。</p>
 					</div>
 				</section>
 	
@@ -98,7 +98,7 @@
 						<header>
 							<h2>六月，朝思暮想</h2>
 						</header>
-						<p>宝贝，两周年快乐！和你在一起很开心，我想继续和你一起散步在静谧的湖边，石块垒的桥，人来人往的街区，和属于我们的床。</p>
+						<p><strong>宝贝，两周年快乐！！！</strong></br>两年七百三十天一万七千五百二十个小时，我们一起走过了许多地方，有山、有路、有湖、有桥，我们一起为着彼此努力奋斗。和你在一起很开心，我想继续和你一起散步在静谧的湖边，石块垒的桥，人来人往的街区，和温暖闲适的床。</p>
 					</div>
 				</section>
 
