--- a/second_anniversary/index.html
+++ b/second_anniversary/index.html
@@ -98,7 +98,7 @@
 						<header>
 							<h2>六月，朝思暮想</h2>
 						</header>
-						<p><strong>宝贝，两周年快乐！！！</strong></br>两年七百三十天一万七千五百二十个小时，我们一起走过了许多地方，有山、有路、有湖、有桥，我们一起为着彼此努力奋斗。和你在一起很开心，我想继续和你一起散步在静谧的湖边，石块垒的桥，人来人往的街区，和温暖闲适的床。</p>
+						<p><strong>宝贝，两周年快乐！！！</strong>两年七百三十天一万七千五百二十个小时，我们一起走过了许多地方，有山、有路、有湖、有桥，我们一起为着彼此努力奋斗。和你在一起很开心，我想继续和你一起散步在静谧的湖边，石块垒的桥，人来人往的街区，和温暖闲适的床。</p>
 					</div>
 				</section>
 
