--- a/second_anniversary/map_heart/index.html
+++ b/second_anniversary/map_heart/index.html
@@ -62,7 +62,7 @@
 							<div>
 								<section>
 									<h2>Happy Anniversary</h2>
-									<p>亲爱的宝贝，这件礼物在这个世界上是独一无二的，就像宝贝你一样。这上面一半是你，一半是我。东南西北，左边有我们一起走过的大街小巷，走在这些路上，只要想起你，连空气都是你的味道。右边是你现在在的城市，在屏幕里，我看着你分享给我的蓝天、白云和碧湖，将来，我们再一起把它走遍。</p>
+									<p>亲爱的宝贝，这件礼物是专为你设计的，就像宝贝你一样，独一无二。这上面一半是你，一半是我。东南西北，左边有我们一起走过的大街小巷，走在这些路上，只要想起你，连空气都是你的味道。右边是你在的城市，在屏幕里，我看着你分享给我的蓝天、白云和碧湖，将来，我们再一起把它走遍。</p>
 								</section>
 								<section>
 									<h2>Beijing&nbsp;&hearts;&nbsp;Evanston</h2>
